retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>If your rate has been issued by a state agency, select the stateissuing agency as it is written on the indirect cost rate document.</inlineHelpText>
        <label>State</label>
        <picklist>
            <controllingField>Rate_Type__c</controllingField>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>States__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supertype__c</fullName>
        <label>Supertype</label>
        <picklist>
            <picklistValues>
                <fullName>CNCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Treatment_of_FringeBenefits__c</fullName>
        <label>Treatment of FringeBenefits</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Treatment_of_Paid_Absences__c</fullName>
        <label>Treatment of Paid Absences</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VISTA_TIN__c</fullName>
        <label>VISTA TIN</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verified_via__c</fullName>
        <label>Verified via</label>
        <picklist>
            <controllingField>Did_not_meet_500_000_threshold__c</controllingField>
            <picklistValues>
                <fullName>SF 990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Statement Audit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (explain in comments)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Website_url__c</fullName>
        <label>Website (url)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip1__c</fullName>
        <label>Zip</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_4__c</fullName>
        <label>Zip+4</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Document_Type__c</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>EIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Organizations</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>State_Commission</fullName>
        <active>true</active>
        <label>State Commission</label>
    </recordTypes>
    <recordTypes>
        <fullName>organization</fullName>
        <active>true</active>
        <label>organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>test</fullName>
        <active>true</active>
        <label>test</label>
    </recordTypes>
    <recordTypes>
        <fullName>test_1</fullName>
        <active>true</active>
        <label>test 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>A133_Audit_reviewed_for_FY_ending_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 (AND
 ( A133_Audit_reviewed_for_FY_ending__c  = False,
 (!ISBLANK(TEXT( A133_Audit_reviewed_for_FY_ending_date__c ))))) 
,(AND
 ( A133_Audit_reviewed_for_FY_ending__c  = True,
(ISBLANK(TEXT( A133_Audit_reviewed_for_FY_ending_date__c ))))))</errorConditionFormula>
        <errorDisplayField>A133_Audit_reviewed_for_FY_ending_date__c</errorDisplayField>
        <errorMessage>If only when A133 Audit reviewed for FY ending is checked, then you have to enter a date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>A133_not_required_because</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ( A133_not_required_because__c = FALSE),
OR(
(For_Profit_Organization__c = True),
(Did_not_meet_500_000_threshold__c=True),
(NOT(ISBLANK(TEXT( Verified_via__c ) )))
)
)</errorConditionFormula>
        <errorDisplayField>A133_not_required_because__c</errorDisplayField>
        <errorMessage>Please select the &quot;A133  not required because&quot; checkbox</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corrective_Action_Completed1</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

  A133_Audit_reviewed_for_FY_ending__c  ,
 ISBLANK(TEXT(   Corrective_Action_Completed1__c   ))
 )</errorConditionFormula>
        <errorDisplayField>Corrective_Action_Completed1__c</errorDisplayField>
        <errorMessage>You can only select picklist options when A133 Audit reviewed for FY ending is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Corrective_action_completed</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

 IG_Audit_Issued_on__c ,
 ISBLANK(TEXT(  Corrective_Action_Completed__c  ))
 )</errorConditionFormula>
        <errorDisplayField>Corrective_Action_Completed__c</errorDisplayField>
        <errorMessage>You can only select picklist options when IG Audit Issued on is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DUNS_Number</fullName>
        <active>true</active>
        <description>DUNS number should be 9 digit only.</description>
        <errorConditionFormula>AND(  NOT( $Profile.Name = &apos;Applicant&apos;), NOT(ISBLANK( DUNS__c )) ,NOT(REGEX(  DUNS__c , &quot;(\\d){9}&quot;)))</errorConditionFormula>
        <errorDisplayField>DUNS__c</errorDisplayField>
        <errorMessage>Please enter a 9 digit DUNS number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_fields_required</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Do_you_have_anIndirect_Cost_Rate__c , &apos;Yes&apos;), 
OR( 
(ISBLANK( Effective_From__c )), 
(ISBLANK( Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Do_you_have_anIndirect_Cost_Rate__c</errorDisplayField>
        <errorMessage>Effective from and to fields should be required as Indirect cost rate is &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_fields_should_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Do_you_have_anIndirect_Cost_Rate__c , &apos;No&apos;),
 OR(
   NOT(ISBLANK( Effective_From__c )),
   NOT(ISBLANK( Effective_To__c ))))</errorConditionFormula>
        <errorDisplayField>Effective_From__c</errorDisplayField>
        <errorMessage>Effective from and to fields should be blank as you dont have Indirect cost rate</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description_cant_be_blank</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Status__c , &apos;Other&apos;) , 
ISBLANK( Descriptions__c ) )</errorConditionFormula>
        <errorDisplayField>Descriptions__c</errorDisplayField>
        <errorMessage>If you have selected &quot;Other&quot; in the Rate status, Please provide the description.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EIN_Number</fullName>
        <active>true</active>
        <description>EIN # should be 9 digit number.</description>
        <errorConditionFormula>AND( NOT(ISBLANK( EIN__c)),NOT(REGEX(  EIN__c , &quot;(\\d){9}&quot;)))</errorConditionFormula>
        <errorDisplayField>EIN__c</errorDisplayField>
        <errorMessage>EIN # should be a 9 digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Effective_To_grater_than_Effective_From</fullName>
        <active>true</active>
        <errorConditionFormula>Effective_From__c &gt; Effective_To__c</errorConditionFormula>
        <errorDisplayField>Effective_To__c</errorDisplayField>
        <errorMessage>It must be greater than the value entered for the “Effective From&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAPIIS_Reviewed_on</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK(FAPIIS_Reviewed_on__c),ISPICKVAL(FAPIIS_Reviewed__c ,&apos;Yes&apos;)), 
AND(NOT(ISBLANK(FAPIIS_Reviewed_on__c)),ISPICKVAL(FAPIIS_Reviewed__c ,&apos;No&apos;)),
AND(NOT(ISBLANK(FAPIIS_Reviewed_on__c)),ISPICKVAL(FAPIIS_Reviewed__c ,&apos;N/A&apos;))

)</errorConditionFormula>
        <errorDisplayField>FAPIIS_Reviewed_on__c</errorDisplayField>
        <errorMessage>You can enter a date only when you select FAPIIS_Reviewed as &quot;Yes&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FAPIIS_Reviewed_on_for_NO</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(FAPIIS_Reviewed__c, &apos;No&apos;),
NOT( ISBLANK( FAPIIS_Reviewed_on__c )  ) )</errorConditionFormula>
        <errorDisplayField>FAPIIS_Reviewed_on__c</errorDisplayField>
        <errorMessage>You cannot enter date when you select FAPIIS Reviewed as &apos;No&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FindingsIssues</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

 IG_Audit_Issued_on__c ,
ISBLANK(TEXT( Findings_Issues__c ))
 )</errorConditionFormula>
        <errorDisplayField>Findings_Issues__c</errorDisplayField>
        <errorMessage>You can only select picklist options when IG Audit Issued on is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FindingsIssues1</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

  A133_Audit_reviewed_for_FY_ending__c  ,
 ISBLANK(TEXT(  Findings_Issues1__c  ))
 )</errorConditionFormula>
        <errorDisplayField>Findings_Issues1__c</errorDisplayField>
        <errorMessage>You can only select picklist options when A133 Audit reviewed for FY ending is checked</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IG_Audit_issued_on_date</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
 (AND
 (IG_Audit_Issued_on__c = False,
 (!ISBLANK(TEXT(IG_Audit_Issued_on_date__c))))) 
,(AND
 (IG_Audit_Issued_on__c = True,
(ISBLANK(TEXT(IG_Audit_Issued_on_date__c))))))</errorConditionFormula>
        <errorDisplayField>IG_Audit_Issued_on_date__c</errorDisplayField>
        <errorMessage>If only when  IG Audit Issued on is checked, then you have to enter a date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Issuing_agency</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Issuing_Agency__c , &apos;Other&apos;) ,
 ISBLANK( Description__c ) )</errorConditionFormula>
        <errorDisplayField>Description__c</errorDisplayField>
        <errorMessage>Please provide description when &quot;issuing agency &quot; is selected as &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_cost_information</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Do_you_have_anIndirect_Cost_Rate__c , &apos;No&apos;) ,
 OR(
 NOT(ISBLANK( Description__c ) ),
 NOT(ISBLANK( Descriptions__c ) ),
 NOT(ISBLANK(  Rate_Base__c  ) ),
NOT(ISBLANK(  Treatment_of_FringeBenefits__c ) ),
NOT(ISBLANK(  Treatment_of_Paid_Absences__c ) )))</errorConditionFormula>
        <errorDisplayField>Do_you_have_anIndirect_Cost_Rate__c</errorDisplayField>
        <errorMessage>You cannot enter information for Indirect cost rate type as &quot;NO&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Organization_Legal_name_on_list</fullName>
        <active>true</active>
        <errorConditionFormula>AND((ISBLANK(Excluded_party_list_reviewed_on__c)),NOT(ISBLANK(TEXT(Organization_Legal_Name_on_list__c))))</errorConditionFormula>
        <errorDisplayField>Organization_Legal_Name_on_list__c</errorDisplayField>
        <errorMessage>You can select &quot;Organization Legal Name list on&quot; only when you enter a date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Organization_Type</fullName>
        <active>true</active>
        <errorConditionFormula>IF(INCLUDES( Organization_Type__c , &quot;Federal Government&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;For Profit  Organization&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Higher Education Organization - Private&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Higher Education Organization - State&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;HQ Internal Organizations&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Indian Tribe&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Local Government - County&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Local Government - Municipal&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Local Government - Township&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Native American&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Non-Profit&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Other&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Commission&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Education Agency&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;State Government&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;U.S. Territory&quot;),1,0) + 
IF(INCLUDES( Organization_Type__c, &quot;Unknown Designation&quot;),1,0) &gt;= 4</errorConditionFormula>
        <errorDisplayField>Organization_Type__c</errorDisplayField>
        <errorMessage>You can select only three values from the list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_10_Digit</fullName>
        <active>true</active>
        <description>Phone number should be 10 digit</description>
        <errorConditionFormula>IF(
ISBLANK(Phone) , false , NOT( REGEX( Phone,&quot;(\\D?[0-9]{3}\\D?)[\\s][0-9]{3}-[0-9]{4}&quot;))
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Please enter a 10 digit phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Phone_Number_Cannot_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL( Draft__c , &apos;False&apos;),ISBLANK(Phone))</errorConditionFormula>
        <errorMessage>please fill the phone number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_Base</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
OR(ISPICKVAL(Rate_Type__c,&apos;FederallyNegotiated&apos;),
 ISPICKVAL(Rate_Type__c,&apos;State Negotiated&apos;),
 ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)),
 ISBLANK(Rate_Base__c) )</errorConditionFormula>
        <errorDisplayField>Rate_Base__c</errorDisplayField>
        <errorMessage>Provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rate_percent</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR
( ISPICKVAL(Rate_Type__c, &apos;FederallyNegotiated&apos;),
ISPICKVAL(Rate_Type__c, &apos;State Negotiated&apos;),  
ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)
),


AND( ISBLANK(R_Percent__c) )

)</errorConditionFormula>
        <errorDisplayField>R_Percent__c</errorDisplayField>
        <errorMessage>Please enter the percentage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rbase</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Type__c , &apos;10%Modified Total Direct Cost (MTDC)&apos;) , NOT(ISBLANK(Rate_Base__c) ))</errorConditionFormula>
        <errorDisplayField>Rate_Base__c</errorDisplayField>
        <errorMessage>You cannot enter information when choosen &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TFB</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Type__c , &apos;10%Modified Total Direct Cost (MTDC)&apos;) , NOT(ISBLANK(Treatment_of_FringeBenefits__c) ))</errorConditionFormula>
        <errorDisplayField>Treatment_of_FringeBenefits__c</errorDisplayField>
        <errorMessage>You cannot enter information when choosen &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TPA</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( Rate_Type__c , &apos;10%Modified Total Direct Cost (MTDC)&apos;) , NOT(ISBLANK(Treatment_of_Paid_Absences__c) ))</errorConditionFormula>
        <errorDisplayField>Treatment_of_Paid_Absences__c</errorDisplayField>
        <errorMessage>You cannot enter information when choosen &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Treatment_of_FringeBenefits</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
OR(ISPICKVAL(Rate_Type__c,&apos;FederallyNegotiated&apos;),
 ISPICKVAL(Rate_Type__c,&apos;State Negotiated&apos;),
 ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)),
 ISBLANK(Rate_Base__c) )</errorConditionFormula>
        <errorDisplayField>Treatment_of_FringeBenefits__c</errorDisplayField>
        <errorMessage>Provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Treatment_of_Paid_AAbsences</fullName>
        <active>false</active>
        <errorConditionFormula>AND (
OR(ISPICKVAL(Rate_Type__c,&apos;FederallyNegotiated&apos;),
 ISPICKVAL(Rate_Type__c,&apos;State Negotiated&apos;),
 ISPICKVAL(Rate_Type__c, &apos;State Cost Allocation Plan&apos;)),
 ISBLANK(Rate_Base__c) )</errorConditionFormula>
        <errorDisplayField>Treatment_of_Paid_Absences__c</errorDisplayField>
        <errorMessage>Provide the information</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Verified_via</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 Did_not_meet_500_000_threshold__c = FALSE  ,
 OR(
     ISPICKVAL(Verified_via__c , &apos;SF990&apos;),
 ISPICKVAL(Verified_via__c , &apos;Financial Statement Audit&apos;),
ISPICKVAL(Verified_via__c , &apos;Other( explain in comments&apos;)))</errorConditionFormula>
        <errorDisplayField>Verified_via__c</errorDisplayField>
        <errorMessage>You can choose the picklist only when you have selected the Did not meet $500,000 threshold checkbox.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>modified_total_direct_cost</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL(Rate_Type__c,&apos;10%Modified Total Direct Cost (MTDC)&apos;),
 
OR(
NOT(ISBLANK( Description__c ) ),
 NOT(ISBLANK( Descriptions__c ) ),
NOT(ISBLANK( R_Percent__c))
))</errorConditionFormula>
        <errorDisplayField>Rate_Type__c</errorDisplayField>
        <errorMessage>No description &amp; Rate percent is required when selected &quot;10%Modified Total Direct Cost (MTDC)&quot;</errorMessage>
    </validationRules>
</CustomObject>